# pangenie

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_KFF.md  environment.yml
container/: Dockerfile
demo/: basic-test_genotyping.vcf  test_original_functions.pangenie.cereal
pipelines/regression-based-filtering/scripts/: analysis.py  collect-vcf-stats.py  plot.py
src/: CMakeLists.txt  commands.cpp  commands.hpp  dnasequence.hpp  fastareader.cpp  fastareader.hpp  genotypingresult.hpp  jellyfishcounter.cpp  jellyfishcounter.hpp  kffreader.cpp  kffreader.hpp  pangenie-genotype.cpp  pangenie-sampling.cpp  pggtyper.cpp  uniquekmercomputer.cpp  uniquekmers.hpp  variant.hpp  variantreader.cpp  variantreader.hpp
tests/: CMakeLists.txt  CommandsKffTest.cpp  CommandsTest.cpp  FormatEquivalenceTest.cpp  KffReaderTest.cpp  KmerCounterTest.cpp  VariantReaderTest.cpp  catch.hpp  create_minimal_kff.cpp  create_test_kff.py  run_kff_tests.sh  test_cmake_options.sh  utils.cpp  utils.hpp
tests/data/: KFF_Integration_Test.md  UniqueKmerComputerTest.fa  debug.kff  empty-segments.fa  jf-equiv-test_genotyping.vcf  jf-test_genotyping.vcf  kff-equiv-test_histogram.histo  kff-test_path_segments.fasta  reads_canonical_kmers.txt  reads_equivalent.kff  reads_kmer_only.txt  reads_new.jf  simple_test.kff  small1-genotypes-graph.vcf  small1-genotypes.vcf  small1-ids-close-graph.vcf  small1-ids-close.vcf  small1-ids-genotypes.vcf  small1-phasing-graph.vcf  small4-sampled-panel.vcf  test.kff  test_kff_output_genotyping.vcf  testfull_genotyping.vcf  testsampled_genotyping.vcf  testsampled_histogram.histo
